--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@
   margin:0;
   padding: 0;
   box-sizing: border-box;
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Fira Sans",Ubuntu,Oxygen,"Oxygen Sans",Cantarell,"Droid Sans","Apple Color Emoji","Segoe UI Emoji","Segoe UI Emoji","Segoe UI Symbol","Lucida Grande",Helvetica,Arial,sans-serif;
 }
 body{
   display: flex;
@@ -9,20 +10,112 @@ body{
   align-items: center;
   justify-content: center;
   width: 100vw;
-  height: 100vh;
-  background-color: black;
-  color: white;
+  height: 90vh;
+  background-color: white;
+  color: black;
 }
 .form{
   border-radius: 10px;
-  background-color: aquamarine;
-  padding: 100px;
+  padding: 50px;
+  width: 352px;
+    -webkit-box-shadow: 0 4px 12px rgb(0 0 0 / 15%);
+    box-shadow: 0 4px 12px rgb(0 0 0 / 15%);
+    padding: 24px;
+    border-radius: 8px;
+    margin: 0 auto;
+    background: #fff;
 }
-.form h1,input,button{
-  display: block;
-  margin-bottom: 7vh;
+.form h1{
+  font-size: 2.0rem;
+  line-height: 1.25;
+  font-weight: 600;
+  color: rgba(0,0,0,0.9);
+  padding: 0 0 4px 0;
+}
+.form p{
+    font-size: 0.9rem;
+    line-height: 1.42857;
+    font-weight: 400;
+    color: rgba(0,0,0,0.9);
+    margin-bottom: 20px;
+}
+.form a{
+  text-decoration: none;
+  cursor: pointer;
+    padding: 1px;
+    font-size: 1.0rem;
+    font-weight: 400;
+    font-family: inherit;
+    height: 22px;
+    line-height: 22px;
+    overflow: hidden;
+    color:#0073b1;
+}
+input{
+  margin-bottom: 2vh;
   padding: 10px;
+  display: block;
+  font-size: 1.0rem;
+  line-height: 1.33333;
+  font-weight: 400;
   width: 100%;
-  border: 0px solid black;
-  border-radius: 5px;
+  color: rgba(0,0,0,0.9);
+  border: 1px solid rgba(0,0,0,0.6);
+  border-radius: 4px;
+  cursor: text;
+  
+}
+
+img{
+  cursor: pointer;
+}
+
+
+.btn{
+  margin-bottom: 1vh;
+  padding: 15px;
+  border-radius: 20px;
+  width: 100%;
+  border: 0px solid;
+  background-color:#0073b1 ;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1.0rem;
+  font-weight: 600;
+  font-family: inherit;
+  overflow: hidden;
+  margin-top: 1vh;
+}
+
+.footer-nav{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  padding: 5px;
+  width: 90vw;
+  
+}
+.footer-nav a{
+  margin-right: 15px;
+  font-size: 0.8rem;
+  padding: 8px;
+  line-height: 1.33333;
+  font-weight: 400;
+  color :rgba(0,0,0,0.6);
+  text-decoration: none;
+  
+
+}
+
+
+a:hover{
+  text-decoration: underline;
+}
+
+.or{
+  text-align: center;
+  font-size: 0.9rem;
+  margin-top: 2vh;
 }
