--- a/frontend/src/Homepage.css
+++ b/frontend/src/Homepage.css
@@ -5,27 +5,35 @@ body{
 }
 .h-page{
     background-color: #f8f4ec;
-    height: 94vh;
+    height: 96vh;
     width: 100vw;
-    margin-top: 16vh;
+    margin-top: 18vh;
     display: flex;
-    padding-left: 18%;
-    padding-right: 18%;
-}
-.l-side{
-    flex: 15%;
-    /* background-color: red; */
+    flex-wrap: wrap;
 
 }
+
 .center{
-    flex: 25%;
+    flex: 10%;
+    background-color: #f8f4ec;
 
 
 }
 .r-side{
-    flex: 15%;
-    /* background-color: green; */
+    flex: 10%;
+     margin-top: 0.7em;
+     margin-left: 1.2em;   
+    padding-right: 20%;
+    background-color: #f8f4ec;
+    
 }
+.l-side{
+    flex: 10%;
+    background-color:#f8f4ec;
+    padding-left: 20%;
+    
+}
+
 
 .addP{
     background-color: white;
@@ -91,3 +99,126 @@ li {
     flex-direction: row;
     justify-content: space-evenly;
 }
+
+.l-side-content{
+    display: flex;
+    padding: 0.4rem;
+    padding-top: 2.5vh;
+    margin-top: 2vh;
+    margin-right: 3vh;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    height: 33vh;
+    border-radius: 1.8rem;
+    position: fixed;
+    max-width: 15vw;
+
+  }
+
+  .l-side p {
+    color:rgb(139, 137, 137);
+    font-size: 0.9rem;
+    padding: 0.4em;
+    justify-content: flex-start;
+  }
+  
+  .mt-1{
+    margin-top: 0.5em;
+  }
+  .l-side-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+  }
+  .ml-1{
+    margin-left: 0.5em;
+  }
+  .mr-1{
+    margin-right: 1em;
+  }
+  .mt-2{
+    margin-top:1em;
+  }
+ a:hover{
+   text-decoration:  underline !important;
+   color:blue !important;
+  }
+  .l-side a{
+    font-size: 1.0rem !important;
+    padding: 0.2em;
+    color:black;
+  }
+  .r-side-content{
+    background-color: white;
+    display: flex;
+    padding: 1em;
+    border-radius: 0.4em;
+    flex-direction: column;
+  }
+  .gray{
+    color:gray;
+  }
+  .öneri{
+    margin-top: 3vh;
+    display: flex;
+    padding: 2px;
+
+  }
+  .btn-btn2{
+    background-color: #fff;
+    border-radius: 10px;
+    border:1px solid gray;
+    padding: 0.5em 1em;
+    font-size: medium;
+    color:#8b8585;
+    max-width: max-content;
+    
+  }
+
+  .btn-btn2:hover{
+    background-color: rgb(219, 219, 219);
+    border:1px solid black;
+    cursor: pointer;
+    color:black;
+  }
+  .r-side-content p{
+    color: #7e7e7e;
+  }
+  .r-side-content p:hover{
+    color: #7e7e7e;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  .öneri h5:hover{
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  .deneme:hover{
+    background-color: rgb(196, 196, 196);
+    border-radius: 7px;
+
+  }
+
+  /* Single Page CSS*/
+
+  .sp{
+    display: flex;
+    height: 100vh;
+    width: 90vw;
+    margin-top: 20vh;
+  }
+  .sp-1{
+    flex: 30%;
+
+  }
+  .sp-2{
+    flex: 45%;
+    padding: 2rem 5rem;
+   
+  }
+  .sp-3{
+    flex: 25%;
+
+  }
