--- a/frontend/src/Navbar.css
+++ b/frontend/src/Navbar.css
@@ -7,6 +7,8 @@
     left: 0;
     display: flex;
     justify-content: space-between;
+    flex-wrap:nowrap;
+    overflow: hidden;
     align-items: center;  
     width: 100vw;
     padding-left: 20rem;
